adding more changes

--- a/client/src/styles/positions.less
+++ b/client/src/styles/positions.less
@@ -190,115 +190,115 @@
 .hydraulics {
   border: 6px solid #75C7F5;
   &.rhonesud {
-    left: 607px;
-    top: 624px;
+    left: 598px;
+    top: 636px;
   }
   &.rhonenord {
-    left: 647px;
-    top: 458px;
+    left: 661px;
+    top: 454px;
   }
   &.rhin {
     left: 776px;
     top: 251px;
   }
   
-  &.pyrenees {
+  &.pyrenees { // KO
     left: 420px;
     top: 745px;
   }
   &.meuse {
-    left: 619px;
-    top: 167px;
+    left: 605px;
+    top: 166px;
   }
-  &.massifcentral {
+  &.massifcentral { // KO
     left: 474px;
-    top: 559px;
+    top: 533px;
   }
   
   &.jura-vosges {
-    left: 670px;
-    top: 368px;
+    left: 677px;
+    top: 310px;
   }
-  &.alpessud {
+  &.alpessud { // KO
     left: 716px;
     top: 649px;
   }
-  &.alpesnord {
-    left: 720px;
+  &.alpesnord { // KO
+    left: 835px;
     top: 516px;
   }
   // Tarn
   &.tarn {
-    top: 249px;
-    left: 123px;
+    left: 455px;
+    top: 611px;
   }
   &.tarentaise {
-    top: 275px;
-    left: 193px;
+    left: 778px;
+    top: 497px;
   }
   &.romanche {
-    top: 300px;
-    left: 100px;
+    left: 739px;
+    top: 585px;
   }
   &.nord-ouest {
-    top: 350px;
-    left: 230px;
+    top: 294px;
+    left: 367px;
   }
   &.maurienne {
-    top: 322px;
-    left: 167px;
+    left: 780px;
+    top: 543px;
   }
   &.lot-truyere {
-    top: 235px;
-    left: 76px;
+    top: 550px;
+    left: 430px;
   }
   &.loire-vienne {
-    top: 200px;
-    left: 157px;
+    top: 419px;
+    left: 462px;
   }
   &.garonne-ariege {
-    left: 207px;
-    top: 218px;
+    left: 382px;
+    top: 697px;
   }
   &.durance-verdon {
-    left: 250px;
-    top: 302px;
+    left: 666px;
+    top: 647px;
   }
   &.drac {
-    left: 268px;
-    top: 244px;
+    left: 676px;
+    top: 581px;
   }
   &.dordogne {
-    left: 300px;
-    top: 281px;
+    left: 367px;
+    top: 504px;
   }
   &.beaufortain {
-    left: 300px;
-    top: 203px;
+    left: 757px;
+    top: 456px;
   }
   &.basse-isere {
-    left: 257px;
-    top: 176px;
+    left: 644px;
+    top: 541px;
   }
   &.arve {
-    left: 257px;
-    top: 121px;
+    left: 739px;
+    top: 416px;
   }
   &.ardeche {
-    left: 352px;
-    top: 268px;
+    left: 521px;
+    top: 554px;
   }
   &.alpes-maritimes {
-    left: 352px;
-    top: 219px;
+    left: 752px;
+    top: 658px;
   }
   &.adour-gaves {
-    top: 399px;
-    left: 243px;
+    left: 286px;
+    top: 698px;
   }
   &.aude-tet {
-    top: 338px;
-    left: 305px;
+    left: 472px;
+    top: 749px;
   }
 }
 .chips-tidal {
@@ -358,28 +358,103 @@
   }
 }
 .rive-1 {
-  left: 758px;
-  top: 207px;
-  transform: rotate(-164.8deg);
+  left: 773px;
+    top: 215px;
 }
 .rive-2 {
-  left: 633.25px;
-  top: 428px;
+  left: 635px;
+  top: 237px;
 }
 .rive-3 {
-  left: 684.25px;
-  top: 471px;
+  left: 127px;
+  top: 244px;
 }
 .rive-4 {
-  left: 403px;
-  top: 469.8px;
+  left: 381px;
+  top: 376px;
 }
 .rive-5 {
-  left: 629.95px;
-  top: 618.81px;
+  left: 321px;
+  top: 471px;
 }
 .rive-6 {
-  left: 346.66px;
-  top: 719.56px;
-  transform: rotate(12.84deg);
+  left: 361px;
+  top: 507px;
+}
+.rive-7 {
+  top: 545px;
+  left: 518px;
+  transform: rotate(9.98deg);
+}
+.rive-8 {
+  top: 592px;
+  left: 410px;
+}
+.rive-9 {
+  top: 673px;
+    left: 231px;
+}
+.rive-10 {
+  top: 662px;
+    left: 355px;
+}
+.rive-11 {
+  top: 725px;
+  left: 462px;
+}
+.rive-12 {
+  left: 708.81px;
+  top: 460.44px;
+}
+.rive-12-l {
+  left: 740px;
+  top: 453px;
+}
+.rive-13 {
+  left: 705px;
+  top: 504px;
+}
+.rive-13-l {
+  left: 741px;
+    top: 493px;
+}
+.rive-14 {
+  left: 723px;
+  top: 533px;
+}
+.rive-14-l {
+  left: 756px;
+  top: 533px;
+}
+.rive-15 {
+  left: 698px;
+    top: 550px;
+}
+.rive-15-l {
+  left: 750px;
+  top: 555px;
+}
+.rive-16 {
+  left: 707px;
+    top: 572px;
+}
+.rive-16-l {
+  left: 739px;
+    top: 579px
+}
+.rive-17 {
+  left: 633px;
+    top: 611px;
+}
+.rive-18 {
+  left: 738px;
+    top: 651px;
+}
+.rive-19 {
+  left: 595px;
+    top: 565px;
+}
+.rive-20 {
+  left: 599px;
+    top: 457px;
 }
