--- a/client/src/styles/positions.less
+++ b/client/src/styles/positions.less
@@ -10,20 +10,20 @@
 .nuclear, .fossil_hard_coal, .fossil_gas, .hydraulics, .tidal, .fossil_oil, .offshore, .biomass {
   border-radius: 50%;
   &.circle-54 {
-    width: 66px;
-    height: 66px;
+    width: 65px;
+    height: 65px;
   }
   &.circle-40 {
-    width: 52px;
-    height: 52px;
+    width: 51px;
+    height: 51px;
   }
   &.circle-34 {
-    width: 46px;
-    height: 46px;
+    width: 45px;
+    height: 45px;
   }
   &.circle-20 {
-    width: 32px;
-    height: 32px;
+    width: 31px;
+    height: 31px;
   }
 }
 .chips-nuclear {
@@ -32,9 +32,9 @@
 .nuclear {
   border: 6px solid #FFE18E;
   &.flamanville {
-    left: 201px;
+    left: 222px;
     top: 152.3px;
-  }  
+  }
   &.civaux {
     left: 338px;
     top: 441px;
@@ -166,7 +166,7 @@
   &.pontsursambre{
     left: 542.32px;
     top: 103.48px;
-  } 
+  }
   &.saint-avold-1 { // EMILE HUCHET
     left: 783px;
     top: 316px;
@@ -201,7 +201,7 @@
     left: 776px;
     top: 251px;
   }
-  
+
   &.pyrenees { // KO
     left: 420px;
     top: 745px;
@@ -214,7 +214,7 @@
     left: 474px;
     top: 533px;
   }
-  
+
   &.jura-vosges {
     left: 677px;
     top: 310px;
@@ -280,7 +280,7 @@
     left: 644px;
     top: 541px;
   }
-  &.arve {
+  &.arve-leman {
     left: 739px;
     top: 416px;
   }
